--- a/affirmations-ai/package.json
+++ b/affirmations-ai/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
+    "@ui-kitten/components": "^5.3.1",
     "convex": "^1.9.0",
     "expo": "~50.0.7",
+    "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.4",
     "react-native-dotenv": "^3.4.10",
-    "react-native-get-random-values": "^1.10.0"
+    "react-native-get-random-values": "^1.10.0",
+    "react-native-svg": "^14.1.0",
+    "expo-av": "~13.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
