--- a/affirmations_app/package.json
+++ b/affirmations_app/package.json
@@ -19,6 +19,7 @@
     "expo-av": "~13.10.5",
     "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
+    "galio-framework": "^0.8.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.4",
