--- a/affirmations_app/package.json
+++ b/affirmations_app/package.json
@@ -26,7 +26,8 @@
     "react-native-get-random-values": "^1.10.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "expo-file-system": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
