--- a/affirmations_app/package.json
+++ b/affirmations_app/package.json
@@ -14,22 +14,24 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "axios": "^1.6.7",
     "convex": "^1.9.0",
     "expo": "~50.0.7",
     "expo-av": "~13.10.5",
+    "expo-file-system": "~16.0.6",
     "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "galio-framework": "^0.8.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.4",
+    "react-native-app-auth": "^7.1.2",
     "react-native-dotenv": "^3.4.10",
     "react-native-get-random-values": "^1.10.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
-    "expo-file-system": "~16.0.6"
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
