--- a/affirmations_app/package.json
+++ b/affirmations_app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@ui-kitten/components": "^5.3.1",
@@ -27,6 +28,7 @@
     "react-native": "0.73.4",
     "react-native-app-auth": "^7.1.2",
     "react-native-dotenv": "^3.4.10",
+    "react-native-elements": "^3.4.3",
     "react-native-get-random-values": "^1.10.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.8.2",
